--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a class="mr-5 hover:text-gray-900">+1-872-307-7869</a>
         </nav>
         <button
-        onClick="location.href='https://forms.gle/X1Lj2sSk73faLsFq9'" class="inline-flex items-center bg-indigo-500 text-white border-0 py-1 px-3 focus:outline-none hover:bg-indigo-500 rounded text-base mt-4 md:mt-0"
+        onClick="location.href='https://forms.gle/NTbdW6nVrKNQsRes9'" class="inline-flex items-center bg-indigo-500 text-white border-0 py-1 px-3 focus:outline-none hover:bg-indigo-500 rounded text-base mt-4 md:mt-0"
         >
           Pay Bill Now
           <svg
