--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="spec.ico" type="image/x-icon">
-    <meta name="discription" content="To pay your Spectrum Bills Call Us +1-872-307-7869,+1-872-307-7869,Pay your bill with 30% discount">
+    <meta name="discription" content="To pay your Spectrum Bills Call Us +1-804-381-0837, +1-872-307-7869,+1-804-381-0837,Pay your bill with 30% discount">
     <meta name="keywords" content="spectrum,spectrum billing number, spectrum no,spectrum number, pay spectrum bill,spectrum,pay my spectrum bill, pay bill ">
     <title>Spectrum</title>
   </head>
